# matplotx

./: .gitattributes  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  tests.yml
src/matplotx/: __about__.py  __init__.py  _cli.py  _contour.py  _labels.py  _optimize.py  _spy.py
src/matplotx/styles/: __init__.py  _aura.py  _ayu.py  _challenger_deep.py  _dhaitz.py  _dracula.py  _dufte.py  _github.py  _gruvbox.py  _helpers.py  _nord.py  _onedark.py  _solarized.py  _tableau.py  _tokyo_night.py
src/mplx/: __init__.py  _contour.py  _labels.py  main.py
src/mplx/styles/: __init__.py  _aura.py  _ayu.py  _challenger_deep.py  _dhaitz.py  _dracula.py  _dufte.py  _github.py  _helpers.py  _nord.py  _onedark.py  _tableau.py  _tokyo_night.py
tests/: create_colorscheme_examples.py  dufte_comparison.py  ref.py  test_bar.py  test_contour.py  test_dufte.py  test_move_labels.py  test_spy.py
tests/data/: gre_343_343_crg.mm
