[metadata]
name = mplx
version = 0.2.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Extensions for Matplotlib
url = https://github.com/nschloe/mplx
project_urls =
    Code=https://github.com/nschloe/mplx
    Issues=https://github.com/nschloe/mplx/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    matplotlib
    networkx
python_requires = >=3.7

[options.packages.find]
where=src
