[metadata]
name = matplotx
version = 0.2.6
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Useful styles and extensions for Matplotlib
url = https://github.com/nschloe/matplotx
project_urls =
    Code=https://github.com/nschloe/matplotx
    Issues=https://github.com/nschloe/matplotx/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    matplotlib
    numpy >= 1.20.0
python_requires = >=3.7

[options.packages.find]
where=src

[options.extras_require]
all =
    colorio >= 0.10.0
    networkx
contour =
    networkx
